<resources>
    <string name="app_name">KalkulatorMiksik</string>
    <string name="height_hint">Enter Your height</string>
    <string name="weight_hint">Enter Your weight</string>
    <string name="weight">Weight (kg): </string>
    <string name="height">Height (cm): </string>
    <string name="submit">Submit</string>
    <string name="bmi">BMI:</string>
    <string name="bmi_number" />
    <string name="switch_themes">Switch themes</string>
    <string name="submitError">Please enter your weight and height</string>
    <string name="switchToDarkTheme">Switch to Dark Theme</string>
    <string name="switchToLightTheme">Switch to Light Theme</string>
</resources>